<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:src="@drawable/family"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.appcompat.widget.AppCompatImageView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="18dp"
                android:hint="@string/email"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorHint"
                android:background="@drawable/edt_normal"
                android:imeOptions="actionDone"
                app:layout_constraintBottom_toTopOf="@id/edt_password"
                android:height="50dp"
                android:inputType="textEmailAddress"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="18dp"
                android:hint="@string/senha"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorHint"
                android:background="@drawable/edt_normal"
                android:imeOptions="actionDone"
                app:layout_constraintBottom_toTopOf="@id/edt_nome"
                android:height="50dp"
                android:inputType="textPassword"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_nome"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="18dp"
                android:hint="@string/Nome"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorHint"
                android:background="@drawable/edt_normal"
                android:imeOptions="actionDone"
                app:layout_constraintBottom_toTopOf="@id/edt_nascimento"
                android:height="50dp"
                android:inputType="text"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_nascimento"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="18dp"
                android:hint="@string/nascimento"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorHint"
                android:background="@drawable/edt_normal"
                android:imeOptions="actionDone"
                app:layout_constraintBottom_toTopOf="@id/edt_celular"
                android:height="50dp"
                android:inputType="date"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_celular"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="18dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:height="50dp"
                android:background="@drawable/edt_normal"
                android:hint="@string/celular"
                android:imeOptions="actionDone"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorHint"
                app:layout_constraintBottom_toTopOf="@+id/edt_cpf"
                tools:layout_editor_absoluteX="18dp"
                android:inputType="phone"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_cpf"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="18dp"
                android:hint="@string/cpf"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorHint"
                android:background="@drawable/edt_normal"
                android:imeOptions="actionDone"
                app:layout_constraintBottom_toTopOf="@id/edt_cep"
                android:height="50dp"
                android:inputType="number"
                />



            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_cep"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="36dp"
                android:hint="@string/cep"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@android:color/background_dark"
                android:textColorHint="@color/colorHint"
                android:background="@drawable/edt_normal"
                android:imeOptions="actionDone"
                app:layout_constraintBottom_toTopOf="@id/btn_registrar"
                android:height="50dp"
                >


            </androidx.appcompat.widget.AppCompatEditText>
            <Switch
                android:id="@+id/switch_ong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Registro de ONG "
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_cep" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_registrar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/registrar"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="12dp"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_normal"

                app:layout_constraintBottom_toTopOf="@+id/btn_voltar"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_voltar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/voltar"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="60dp"
                android:textAllCaps="false"
                android:background="@drawable/btn_normal"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"/>





        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>