<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <androidx.appcompat.widget.AppCompatImageView
       android:src="@drawable/family"
       android:scaleType="centerCrop"
       android:layout_width="match_parent"
       android:layout_height="match_parent">

   </androidx.appcompat.widget.AppCompatImageView>


 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="50dp"
     app:layout_constraintBottom_toBottomOf="parent">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">


   <View
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@drawable/gradient" />

   <TextView
       android:id="@+id/txt_slogan"
       style="@style/TextAppearance.AppCompat.Headline"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginEnd="24dp"
       android:layout_marginBottom="18dp"
       android:text="@string/slogan"
       android:textColor="@android:color/white"
       android:textSize="30dp"
       app:layout_constraintBottom_toTopOf="@id/edt_login"
       app:layout_constraintEnd_toEndOf="parent" />


   <androidx.appcompat.widget.AppCompatEditText
       android:id="@+id/edt_login"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:layout_marginStart="18dp"
       android:layout_marginEnd="18dp"
       android:layout_marginBottom="18dp"
       android:height="50dp"
       android:background="@drawable/edt_normal"
       android:hint="E-mail/ Usuário"
       android:imeOptions="actionDone"
       android:paddingStart="18dp"
       android:paddingEnd="18dp"
       android:textColor="@android:color/black"
       android:textColorHint="@color/colorHint"
       app:layout_constraintBottom_toTopOf="@id/edt_senha" />

   <androidx.appcompat.widget.AppCompatEditText
       android:id="@+id/edt_senha"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:layout_marginStart="18dp"
       android:layout_marginEnd="18dp"
       android:layout_marginBottom="36dp"
       android:height="50dp"
       android:background="@drawable/edt_normal"
       android:hint="******"
       android:imeOptions="actionDone"
       android:inputType="textPassword"
       android:paddingStart="18dp"
       android:paddingEnd="18dp"
       android:textColor="@android:color/background_dark"
       android:textColorHint="@color/colorHint"
       app:layout_constraintBottom_toTopOf="@id/btn_acessar">


   </androidx.appcompat.widget.AppCompatEditText>

   <androidx.appcompat.widget.AppCompatButton
       android:id="@+id/btn_acessar"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:layout_marginStart="18dp"
       android:layout_marginEnd="18dp"
       android:layout_marginBottom="12dp"
       android:background="@drawable/btn_normal"
       android:text="@string/acessar"
       android:textAllCaps="false"
       android:textColor="@android:color/white"
       android:textSize="18sp"
       android:textStyle="bold"

       app:layout_constraintBottom_toTopOf="@+id/btn_registrar" />

   <androidx.appcompat.widget.AppCompatButton
       android:id="@+id/btn_registrar"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:layout_marginStart="18dp"
       android:layout_marginEnd="18dp"
       android:background="@drawable/btn_normal"
       android:text="@string/registrar"
       android:textAllCaps="false"
       android:textColor="@android:color/white"
       android:textSize="18sp"
       android:textStyle="bold"
       app:layout_constraintBottom_toBottomOf="parent"
       tools:layout_editor_absoluteX="18dp" />


  </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>